# fcc-fastapi

./: .env.sample  .gitignore  README.md  docker-compose.yaml.sample  main.py  pyproject.toml
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py
